# TUBLEX-Bubble-Plume-Analysis

./: LICENSE  README.md  pyproject.toml  requirements.txt
cpp_runtime/: CMakeLists.txt  README.md
cpp_runtime/examples/: sample_mixed_windows.csv  sample_normal_windows.csv  sample_suspicious_windows.csv
cpp_runtime/include/: tublex_runtime.hpp
cpp_runtime/src/: main.cpp  tublex_runtime.cpp
data/metadata/: tublex_video_metadata.csv
data/noise/: tublex_video_noise_sigma10.csv  tublex_video_noise_sigma20.csv  tublex_video_noise_sigma30.csv
data/processed/: tublex_window_features.csv
data/splits/: tublex_video_level_split_seed42.csv
models/random_forest/: rf_tublex_final.joblib  rf_tublex_metadata.json
models/xgboost/: xgb_tublex_final.joblib  xgb_tublex_metadata.json
notebooks/: 01_TUBLEX_RF_Training_and_Selected_Model_Evaluation.ipynb  01_TUBLEX_RF_Training_and_Selected_Model_Evaluation_clean.ipynb  02_TUBLEX_XGBoost_Baseline_Training_and_Evaluation.ipynb  02_TUBLEX_XGBoost_Baseline_Training_and_Evaluation_clean.ipynb  03_TUBLEX_RF_vs_XGBoost_Holdout_Comparison.ipynb  04_TUBLEX_Noise_Robustness_RF_vs_XGBoost.ipynb  TUBLEX_RF_Video_Demo_Pipeline_Inference.ipynb
results/model_comparison/tables/: ablation_comparison.csv  comparison_split_summary.csv  holdout_error_overlap_summary.csv  holdout_metric_comparison.csv  holdout_model_predictions.csv  holdout_probability_disagreement.csv  (+2 more)
src/tublex/: __init__.py  classifier.py  config.py  detection.py  features_extraction.py  main_live.py  main_offline.py  preprocessing.py  video.py
(+21 files in other folders)
